# zero2prod-rust-book

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  spec.yaml
configuration/: base.yaml
migrations/: 20240608091739_create_subscriptions_table.sql
scripts/: init_db.sh  restart_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  subscriptions.rs
tests/common/: mod.rs
