[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.6.0"
reqwest = "0.12.4"
serde = { version = "1.0.203", features = [
  "derive"
]}
tokio = { version = "1.37.0", features = [
  "macros",
  "rt-multi-thread"
]}
sqlx = { version = "0.7.4", default_features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]}
config = "0.11"
chrono = "0.4.38"
uuid = {version = "1.8.0", features = [ "v4" ] }
log = "0.4.21"
env_logger = "0.11.3"
