[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.6.0"
reqwest = "0.12.4"
serde = { version = "1.0.203", features = [
  "derive"
]}
tokio = { version = "1.37.0", features = [
  "macros",
  "rt-multi-thread"
]}
sqlx = { version = "0.7.4", default_features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]}
config = "0.11"
chrono = "0.4.38"
uuid = {version = "1.8.0", features = [ "v4" ] }
tracing = "0.1.19"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter", "json"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.11"
serde-aux = "4.5.0"
unicode-segmentation = "1.11.0"
validator = "0.14"

[dev-dependencies]
once_cell = "1.19.0"
fake = "2.3.2"
claim = "0.5.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = "0.8.5"
rand_core = "0.6.4"
